Bug 238886 - Usability improvement: current address in addressbar should reappear when hitting Esc
Summary: Usability improvement: current address in addressbar should reappear when hit...
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.4.90
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-26 14:42 UTC by Bernhard Beschow
Modified: 2011-11-02 16:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace of rekonq crashing on imdb.com (20.84 KB, text/plain)
2010-07-04 17:33 UTC, Jens Pranaitis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2010-05-26 14:42:17 UTC
Version:           0.4.90 (using KDE 4.4.3) 
OS:                Linux

After the address got somehow changed in the address bar, hitting Esc should (re-)display the address of the current web site.

Reproducible: Always

Steps to Reproduce:
Erase some text from the address bar and hit Esc.

Actual Results:  
The now uncomplete address stays the same.

Expected Results:  
Display the whole address of the current web site again.

OS: Linux (i686) release 2.6.33-ARCH
Compiler: gcc
Comment 1 Andrea Diamantini 2010-06-01 16:52:48 UTC
Targetting 1.0 as we have (again) some news for the urlbar there and it will be easy fix it there without hackish code.
Comment 2 Jens Pranaitis 2010-07-04 17:33:17 UTC
Created attachment 48587 [details]
backtrace of rekonq crashing on imdb.com
Comment 3 Jens Pranaitis 2010-07-04 17:34:43 UTC
Comment on attachment 48587 [details]
backtrace of rekonq crashing on imdb.com

sorry, this was intended for #242951
Comment 4 Andrea Diamantini 2011-04-08 00:38:03 UTC
Git commit a7862b8b896c99ee3616e8203721c26110af22c7 by Andrea Diamantini.
Committed on 08/04/2011 at 00:45.
Pushed by adjam into branch 'master'.

Use esc button to renew the url seen in the urlbar

Patch by Furkan Uzumcu :)

BUG:238886
REVIEW:101042

M  +3    -0    src/urlbar/urlbar.cpp     

http://commits.kde.org/rekonq/a7862b8b896c99ee3616e8203721c26110af22c7
Comment 5 Andrea Diamantini 2011-04-08 00:38:42 UTC
Git commit 5f937962e74b865acf313cb1e40f113e86dc6450 by Andrea Diamantini.
Committed on 08/04/2011 at 00:45.
Pushed by adjam into branch '0.7-branch'.

Use esc button to renew the url seen in the urlbar

Patch by Furkan Uzumcu :)

BUG:238886
REVIEW:101042

M  +3    -0    src/urlbar/urlbar.cpp     

http://commits.kde.org/rekonq/5f937962e74b865acf313cb1e40f113e86dc6450