Use esc button to renew the url seen in the urlbar

Patch by Furkan Uzumcu :)

BUG:238886
REVIEW:101042